[package]
name = "msbt_bindings_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
byteorder = "1.4"
cc = "1.0"
bindgen = "0.69.4"
msyt = { git = "https://github.com/SolidLink95/msyt-lib" }
# roead = { version = "1.0.0", features = ["yaml", "sarc", "byml"] }
#roead = { version = "0.25.1", features = ["yaml", "sarc", "byml"] }

[build-dependencies]
cc = "1.0"

[target.x86_64-pc-windows-msvc]
rustflags = [
]
